--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   align-items: center;
   justify-content: center;
   perspective: 1000px;
+  background: linear-gradient(120deg, rgba(247,126,192,1) 0%, rgba(198,161,237,1) 47%, rgba(105,255,251,1) 100%);
 }
 .container {
   width: 50%;
@@ -24,6 +25,7 @@ body {
   width: 35rem;
   border-radius: 30px;
   padding: 0rem 5rem;
+  background-color: white;
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.2);
 }
 
@@ -37,15 +39,12 @@ body {
   width: 20rem;
   z-index: 2;
   transition: all 0.75s ease-out;
+  transform: rotate(60deg);
 }
 .circle {
   width: 15rem;
   height: 15rem;
-  background: linear-gradient(
-    to right,
-    rgba(245, 70, 66, 0.75),
-    rgba(8, 83, 156, 0.75)
-  );
+  background: linear-gradient(120deg, rgba(252,30,150,1) 0%, rgba(198,161,237,1) 47%, rgba(105,255,251,1) 100%);
   position: absolute;
   border-radius: 50%;
   z-index: 1;
@@ -82,8 +81,9 @@ button.active {
   color: white;
 }
 .purchase {
-  margin-top: 5rem;
+  margin-top: 3rem;
   transition: all 0.75s ease-out;
+  margin-bottom: 1rem;
 }
 .purchase button {
   width: 100%;
